--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="preconnect" href="https://open.spotify.com" />
     <link rel="dns-prefetch" href="https://open.spotify.com" />
-    <link rel="preload" as="image" href="/hero-bg.png" />
-    <link rel="preload" as="audio" href="/cuernos-teaser.mp3" type="audio/mp3" />
+    <link rel="preload" as="image" href="/hero-bg.webp" />
     <link rel="preload" as="image" href="/matty-1.JPG" />
-    <link rel="preload" as="image" href="/matty-2.jpg" />
+    <link rel="preload" as="image" href="/matty-2.webp" />
     <link rel="icon" type="image/svg+xml" href="/dj-l-svgrepo-com.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MATTYWAVES</title>
